# scaffold-improvement

./: .dockerignore  Dockerfile  README.md  main.py  model_patch.diff  new_patch.diff  pyproject.toml  small.json  temp.patch  temp_check.patch
output/baseline/: baseline_report.json
prompts/: improve.py
src/: agent.py  evaluate.py  self_improve.py  utils.py
tools/: edit_tools.py
