[project]
name = "self-improve-bench"
version = "0.1.0"
description = "Self-improvement SWE-bench harness wrapper"
requires-python = ">=3.10"

dependencies = [
  "anthropic",
  "backoff",
  "docker",
  "gitpython",
  "openai",
  "datasets",
  # uncomment if you want real SWE-bench harness inside the image
  # "swebench",
]